--- a/styles/main.css
+++ b/styles/main.css
@@ -5,17 +5,23 @@ body {
     background-color: #f3ebd6;
     font-family: 'Cabin', sans-serif;
     letter-spacing: 3px;
+    width: 100%;
 }
 
 a {
+    color: inherit;
     text-decoration: none;
 }
 
 h1 {
-    font-family: 'Titan One', sans-serif;
     font-size: 96px;
     color: #ff8623;
     text-align: center;
+}
+
+h2 {
+    font-size: 48px;
+    color: #4671df;
 }
 
 .navbar {
@@ -58,6 +64,7 @@ h1 {
 }
 
 .large-header {
+    font-family: 'Titan One', sans-serif;
     padding-top: 80px;
     display: flex;
     justify-content: center;
@@ -67,7 +74,33 @@ h1 {
 
 .blog-container {
     display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.blog-post-containers {
+    text-align: center;
+    height: 200px;
+    width: 40%;
+}
+.blog-link {
+    text-decoration: underline;
+}
+
+.blog-header {
+    padding-top: 80px;
+    display: flex;
     justify-content: center;
     align-items: center;
+    height: 200px;
+}
+
+.blog-text-container {
+    display: flex;
+    justify-content: center;
     text-align: center;
+}
+
+.blog-text {
+    width: 60%;
 }
